// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render columns-top、columns-bottom slots correctly 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar">
    <button type="button"
            class="van-picker__cancel van-haptics-feedback"
    >
      Cancel
    </button>
    <button type="button"
            class="van-picker__confirm van-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  Custom Columns Top
  <div class="van-picker__columns"
       style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="van-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
  Custom Columns Bottom
</div>
`;

exports[`should render confirm/cancel slot correctly 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar">
    <button type="button"
            class="van-picker__cancel van-haptics-feedback"
    >
      Custom Cancel
    </button>
    <button type="button"
            class="van-picker__confirm van-haptics-feedback"
    >
      Custom Confirm
    </button>
  </div>
  <div class="van-picker__columns"
       style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="van-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render option slot correctly 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar">
    <button type="button"
            class="van-picker__cancel van-haptics-feedback"
    >
      Cancel
    </button>
    <button type="button"
            class="van-picker__confirm van-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div class="van-picker__columns"
       style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="van-picker-column__wrapper"
      >
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="van-picker-column__item van-picker-column__item--selected"
        >
          Custom 1990, index: 0
        </li>
        <li role="button"
            style="height: 44px;"
            tabindex="0"
            class="van-picker-column__item"
        >
          Custom 1991, index: 1
        </li>
      </ul>
    </div>
    <div class="van-picker__mask"
         style="background-size: 100% 110px;"
    >
    </div>
    <div class="van-hairline-unset--top-bottom van-picker__frame"
         style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should render title slot correctly 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar">
    <button type="button"
            class="van-picker__cancel van-haptics-feedback"
    >
      Cancel
    </button>
    Custom title
    <button type="button"
            class="van-picker__confirm van-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div class="van-picker__columns"
       style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="van-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render toolbar slot correctly 1`] = `
<div class="van-picker">
  <div class="van-picker__toolbar">
    Custom toolbar
  </div>
  <div class="van-picker__columns"
       style="height: 264px;"
  >
    <div class="van-picker-column">
      <ul style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
          class="van-picker-column__wrapper"
      >
      </ul>
    </div>
  </div>
</div>
`;
